--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,7 @@ inherit_gem:
   rubocop-fjord:
     - "config/rubocop.yml"
     - "config/rails.yml"
+
+Rails/CreateTableWithTimestamps:
+  Exclude:
+    - '**/db/migrate/**/*'
