Userモデルのテスト追加

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,8 +5,11 @@
 # below each fixture, per the syntax in the comments below
 #
 alice:
+  name: alice
   email: alice@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
-#two: {}
-# column: value
+bob:
+  email: bob@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+
